acl-1.1.1 (23 Jul 2001)
	- install static libs and libtool archives into /usr/lib
	- shared libraries are unchanged, however

acl-1.1.0 (16 Jul 2001)
	- reworked Makefiles to use libtool
	- rework some of the Debian packaging rules
	- libacl now installed into /lib instead of /usr/lib
	- chacl now installed into /bin instead of /usr/bin,
	  for consistency with chmod, chgrp, and chown

acl-1.0.8 (02 Jul 2001)
	- Work around syscall number collision on recent ia64 kernels

acl-1.0.7 (20 June 2001)
	- Change acl_get_qualifier() to dynamically allocate
	  the returned qualifier so that acl_free() can be
	  used to free the qualifier as decreed in the
	  withdrawn Posix standard.
	  This change was suggested by Juergen Hasch when
	  using code with Samba.

acl-1.0.6 (13 June 2001)
	- Move acl/acl.h --to--> sys/acl.h which makes
	  it satisfy the Posix ACL standard.
	  This was also what was used in IRIX.
	- A fix was also done on June 11 for "chacl -b" and
	  "chacl -d" where the default ACL is being given. 
	  The code was checking the validity of the access ACL
	  instead of the default ACL. This is a real problem for
	  the -d option which doesn't have an access ACL specified ! 

acl-1.0.5 (6 June 2001)
	- Fix up acl_to_text and acl_to_short_text so that if it is
	  given an empty ACL then an empty string is returned. 
          Suggestion made by Juergen Hasch where comparing with
	  the ext2 Posix ACL patch of Andreas Gruenbacher.
	- Update acl.h to define ACL_OTHER (same as ACL_OTHER_OBJ).

acl-1.0.4 (29 May 2001)
	- Fix up acl_get_file, acl_get_fd bug for non-IRIX semantics
	  which I introduced in 1.0.3 (thanks Juergen Hasch).
        - Make acl_get_entry match Posix 23.4.13.3 semantics.
        - Make acl_create_entry match Posix 23.4.7.2 semantics.
	- add acl_get_perm() for the Samba work

acl-1.0.3 (24 May 2001)
	- Update libacl functions of acl_get_file, acl_get_fd,
	  so that they can do ext2 P1003.1e style semantics by default 