@@ -1,6 +1,7 @@
 acl-1.1.1 (23 Jul 2001)
 	- install static libs and libtool archives into /usr/lib
 	- shared libraries are unchanged, however
+	- merged patch from Danny Cox (added -r option to chacl)
 
 acl-1.1.0 (16 Jul 2001)
 	- reworked Makefiles to use libtool
